[battor agent] Add 'read more bytes' logic in the BattOr connection

Right now, when one read doesn't result in a complete message, the read
fails and retries up to RETRY_COUNT (3) times. However, the BattOr
connection SHOULD read more data from the serial connection until:

1) A complete message is read
2) Bytes are read that are irrecoverably erroneous in some way
or
3) More bytes are read than the maximum message length

This CL makes this the case.

BUG=613562

Review-Url: https://codereview.chromium.org/2000743002
Cr-Commit-Position: refs/heads/master@{#395110}

Former-commit-id: f7b11a03318b4e244bb743bb506afc702d7e8f7c